Update BurpSuite_pro.bat